Bug 454243 - Window glitching and blinking after closing
Summary: Window glitching and blinking after closing
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.24.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 454518 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-23 00:24 UTC by Marcelo Bossoni
Modified: 2022-06-01 17:32 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcelo Bossoni 2022-05-23 00:24:23 UTC
SUMMARY
After closing a window, it glitches out and blinks on screen.
Sometimes it keeps like that for a while

I'm using the "explode" effect. Don't know if that plays any rules on that.

STEPS TO REPRODUCE
1. Close a window

OBSERVED RESULT
Close animation plays and window blinks again with full content and then disappears

EXPECTED RESULT
Close animation plays and window is properly closed with no glitching

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.4
Kernel Version: 5.17.9-xanmod1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 1600 Six-Core Processor
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1070/PCIe/SSE2
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7A37
System Version: 1.0
Comment 1 Marcelo Bossoni 2022-05-23 20:44:20 UTC
https://photos.app.goo.gl/CiTmTMVJDG5DPj6x9
Comment 2 Duncan 2022-05-24 01:27:14 UTC
I was seeing similar from a couple weeks ago, tho here the blinking continued until I triggered a repaint (usually by focusing a different window, triggering the dim-inactive effect and thus a repaint of the previously focused window as well as the newly focused one).

* Fall-apart effect was on and turning it off eliminated the problem. (I left it off for now.)

* git-master frameworks/plasma (and most gear) using the gentoo/kde overlay live ebuilds
(so it's not just arch)

* amdgpu (so it's not nvidia-specific)

I hadn't upgraded again until yesterday and have other problems (systemsettings, krunner, plasmashell segfaults triggered on first geometry-changed, possibly due to a missing rebuild of something after upgrading to qt-5.15.4 but that's what I'm looking at new bugs for) ATM so can't get into the config to try turning it back on to see if the problem's still there.
Comment 3 Duncan 2022-05-24 03:15:14 UTC
Status: Confirmed.

Problem is still there.  I found the fix for the segfaulting issue that was preventing me testing for resolution of this bug, turned the fall-apart effect back on, and the problem returned against the fresh git-master build I did today.

So fall-apart is back off again for the moment as a workaround.  Wish all workarounds were that simple, but it'd be nice to have it back working one of these days. =:^)
Comment 4 Bug Janitor Service 2022-05-24 08:31:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2455
Comment 5 Vlad Zahorodnii 2022-05-24 12:36:21 UTC
Git commit 459b8b9d8d13a4acda23fbad1cb0aede9c49b818 by Vlad Zahorodnii.
Committed on 24/05/2022 at 12:36.
Pushed by vladz into branch 'Plasma/5.25'.

effects/fallapart: Fix glitch

The WindowItem visibility reference must be dropped after, not before
starting painting. It also makes the fall apart effect code consistent
with other effects.
Tested-by: Merge Service <https://invent.kde.org/plasma/kwin/-/merge_requests/2455>
Part-of: <https://invent.kde.org/plasma/kwin/-/merge_requests/2455>


(cherry picked from commit 80b9617badb35e92911951fa110b9b361591f7d8)

M  +16   -14   src/effects/fallapart/fallapart.cpp

https://invent.kde.org/plasma/kwin/commit/459b8b9d8d13a4acda23fbad1cb0aede9c49b818
Comment 6 Nate Graham 2022-06-01 17:32:17 UTC
*** Bug 454518 has been marked as a duplicate of this bug. ***